@@ -1,34 +1,26 @@
 package com.devcamp.eztour.controller;
 
+import com.devcamp.eztour.common.ImportAPI;
+import com.devcamp.eztour.common.PrepareData;
 import com.devcamp.eztour.domain.reserv.*;
 import com.devcamp.eztour.domain.user.UserDto;
 import com.devcamp.eztour.service.reserv.PayService;
 import com.devcamp.eztour.service.reserv.ReservService;
-import com.google.gson.Gson;
 import com.google.gson.JsonObject;
-import kotlinx.serialization.json.Json;
+import com.siot.IamportRestClient.IamportClient;
+import com.siot.IamportRestClient.response.IamportResponse;
+import com.siot.IamportRestClient.response.Payment;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.util.MultiValueMap;
-import org.springframework.validation.BindingResult;
-import org.springframework.web.bind.WebDataBinder;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.client.RestClientException;
-import org.springframework.web.client.RestTemplate;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
-import javax.validation.Valid;
-import java.io.UnsupportedEncodingException;
+import java.math.BigDecimal;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 @Controller
@@ -39,21 +31,31 @@ public class PayController {
     @Autowired
     PayService payService;
 
-    //결제승인상태
-//    static final String PAY_APPV_BEING_PROCESSED = "8A";   //결제중
-//    static final String PAY_APPV_FAIL = "8B";              //결제 실패
-    static final String PAY_APPV_SUCCESS= "8C";            //결제 완료
-//    static final String PAY_APPV_REFUND_FAIL= "8D";        //환불 실패
-//    static final String PAY_APPV_REFUND_SUCCESS= "8E";     //환불 완료
+    private final IamportClient client;
 
-    //결제상태
-    static final String PAY_STT_READY= "7A";             //결제 대기 //환불안됨
-    static final String PAY_STT_CANCELLED= "7B";         //결제 취소 //환불안됨
-    static final String PAY_STT_COMPLETE= "7C";          //결제 완료
-    static final String PAY_STT_FAILED= "7D";            //결제 실패 //환불안됨 //안씀
-    static final String PAY_STT_PREPARE = "7E";          //결제 준비중 //환불안됨
+    public PayController(ImportAPI api){
+        String impKey = api.getIMP_KEY();
+        String impSecret = api.getIMP_SECRET();
+        client = new IamportClient(impKey, impSecret);
+    }
+
+    //결제승인상태 서버 정보 기반 상태코드
+    static final String PAY_APPV_BEING_PROCESSED = "8A";   //결제 중
+    static final String PAY_APPV_FAIL = "8B";              //결제 실패
+    static final String PAY_APPV_SUCCESS= "8C";            //결제 완료
+    static final String PAY_APPV_REFUND_FAIL= "8D";        //환불 실패
+    static final String PAY_APPV_REFUND_SUCCESS= "8E";     //환불 완료
+    static final String PAY_APPV_READY= "8F"; //가상계좌 발급
+
+    //결제상태 사용자 측 상태코드
+    static final String PAY_STT_READY= "7A";             //결제 대기
+    static final String PAY_STT_CANCELLED= "7B";         //결제 취소
+    static final String PAY_STT_COMPLETE= "7C";          //결제 성공
+    static final String PAY_STT_FAILED= "7D";            //결제 실패
+    static final String PAY_STT_PREPARE = "7E";          //결제 준비중
     static final String PAY_STT_FORGERY_PRC = "7F";      //결제 위조 시도 - 금액
     static final String PAY_STT_FORGERY_MLG = "7G";      //결제 위조 시도 - 마일리지
+
     //예약 상태
     static final String RESERV_ACCEPT= "6A";              //예약접수
     static final String RESERV_APPV= "6B";                //예약승인
@@ -63,33 +65,37 @@ public class PayController {
     static final String RESERV_UNACCEPT= "6F";            //예약불가
     static final String RESERV_ETC= "6G";                 //예약기타상태
 
-    private static final String IMP_KEY = "0896863910828990";
-    private static final String IMP_SECRET = "cDWs1IcH29C6H5fLdVcTwbfPrcrWHKKN3BEFTn3r55bR97ULVeBZxAPiuLWPG3RUKxcGAkV1p1wDRyqd";
 
     @GetMapping("/pay")
-        public String getPayView(String rsvt_no, String prd_dtl_cd, String prd_nm, HttpServletRequest req, Model m, HttpSession session){
-
+    public String getPayView(String rsvt_no, String prd_nm, HttpServletRequest req, HttpSession session, RedirectAttributes rttr, Model m){
+        ReservDto reservDto=null;
         UserDto userDto = (UserDto) session.getAttribute("userDto");
         String gst_id = (String) session.getAttribute("guest");
 
         UserDto userInfo = new UserDto();
-        String usr_id = "";
+        String usr_id;
         if(userDto!=null){
             usr_id = userDto.getUsr_id();
         } else {
             usr_id = gst_id;
         }
         userInfo.setUsr_id(usr_id);
-        ////해당 예약에 대한 결제가 이미 진행되었나?////
-        String payStatus = payService.getPayStatus(rsvt_no, usr_id);
-        if (payStatus!=null) { //결제 이력이 이미 있다면(결제완료 or 결제 위변조 시도 둘 밖에 없음)
-            return "redirect:"+req.getHeader("Referer");
-            //msg를 어떻게 보낼까?
-            //이미 결제완료 되었거나 취소된 상품입니다.
+
+        try {
+            Map<String, String> map = new HashMap<>();
+            map.put("rsvt_no", rsvt_no);
+            map.put("usr_id", usr_id);
+            reservDto = reservService.checkReservInfo(map);
+        } catch (Exception e) {
+            e.printStackTrace();
         }
 
-        //결제할 금액
-        long pay_ftr_prc = 0;
+        if (reservDto==null || !Objects.equals(reservDto.getCmn_cd_rsvt_stt(), RESERV_APPV)) {
+            rttr.addFlashAttribute("msg", "INVALID_ACCESS");
+            return "redirect:"+req.getHeader("Referer");
+        }
+
+        long pay_ftr_prc;
         GuestDto guestDto = null;
         try {
             if(userDto!=null){
@@ -115,11 +121,7 @@ public class PayController {
             }
         } catch (Exception e) {
             e.printStackTrace();
-            try {
-                m.addAttribute("msg", URLEncoder.encode("login please 로그인페이지로 갑니다", "utf-8"));
-            } catch (UnsupportedEncodingException ex) {
-                ex.printStackTrace();
-            }
+            m.addAttribute("msg", URLEncoder.encode("login please 로그인페이지로 갑니다", StandardCharsets.UTF_8));
             return "/reserv/reservView.tiles";
         }
 
@@ -127,105 +129,199 @@ public class PayController {
     }
 
     @ResponseBody
-    @PostMapping("/saveResult")
-    public String savePayResult(@RequestBody PayDto payDto, HttpSession session, HttpServletResponse response){
+    @PostMapping("/prepare")
+    public String preparePay(@RequestBody PayDto payDto, HttpSession session){
+        JsonObject jsonResult = new JsonObject();
+        String merchant_uid = UUID.randomUUID().toString();
         UserDto userDto = (UserDto) session.getAttribute("userDto");
         String gst_id = (String) session.getAttribute("guest");
 
-        String usr_id = "";
+        String usr_id;
         if(userDto!=null){
             usr_id = userDto.getUsr_id();
         } else {
             usr_id = gst_id;
         }
 
-        String imp_uid = payDto.getImp_uid();
-        String merchant_uid = payDto.getPay_no();
-
-        Map<String, Object> map = null;
-        JsonObject jsonResult = new JsonObject();
-
-        Double amount = 0d;
-        ///////////////마일리지////////////////////////
-        int realUserMlg = 0;
-
         try {
-            if(userDto!=null){
-                //비회원이 아닐 때
-                realUserMlg = reservService.getUserMlg(usr_id);
-            }
-            if(realUserMlg < payDto.getUsed_mlg()){
-                //이미 결제 후라서
-                //결제테이블에 상태값을 다르게 저장해서 관리자에게 알려서 관리자가 취소하게해야한다
-                //예외발생시킴
-                payDto.setCmn_cd_pay_stt(PAY_STT_FORGERY_MLG);
-                payDto.setCmn_cd_pay_appr(PAY_APPV_SUCCESS);
-                throw new MlgForgeryException("마일리지 범위 초과");
-            }
-        /////////////////마일리지 확인////////////////
+            long pay_ftr_prc = reservService.getPayFtrPrc(payDto.getRsvt_no());
+            int used_mlg = payDto.getUsed_mlg();
+            long amount = pay_ftr_prc - used_mlg;
 
-            String access_token = payService.getToken(IMP_KEY, IMP_SECRET);
-            map = payService.getPaymentData(imp_uid, access_token);
-
-            amount = (Double) map.get("amount");     //결제한 금액
-            Integer used_mlg = payDto.getUsed_mlg();    //사용한 마일리지
-            String status = (String) map.get("status");     //결제 상태
-
-            Long pay_ftr_prc_DB = reservService.getPayFtrPrc(payDto.getRsvt_no()); //DB에서 가져온 결제 예정 금액
-
-            //결제금액 비교
-//            if(pay_ftr_prc_DB==(amount + used_mlg) && pay_ftr_prc_DB.equals(payDto.getPay_ftr_prc())){
-            if(true){
-                payDto.setCmn_cd_pay_stt(PAY_STT_COMPLETE);
-                payDto.setCmn_cd_pay_appr(PAY_APPV_SUCCESS);
-                //결제완료 상태 메시지 보내기 & 결제완료 상태코드 pay 테이블에 저장
-//                res.send({ status: "success", message: "일반 결제 성공" });
-
-                //마일리지 차감 회원인경우에만
-                if(userDto!=null){
-                    //비회원이 아닐 때
-                    //예외발생하면???
-                    reservService.updateUserMlg("minus", used_mlg, usr_id);
-                }
-                //예약상태 완료로 변경
-                reservService.updateRsvtStt(RESERV_COMPELET, PAY_STT_COMPLETE, payDto.getRsvt_no());
-                String msg = "결제가 정상적으로 처리되었습니다";
-                jsonResult.addProperty("status", "success");
-            } else {
-                payDto.setCmn_cd_pay_stt(PAY_STT_FORGERY_PRC);
-                payDto.setCmn_cd_pay_appr(PAY_APPV_SUCCESS);
-                // 결제금액 불일치. 위/변조 된 결제 & 결제위변조시도 상태코드 pay테이블에 저장
-//                throw { status: "forgery", message: "위조된 결제시도" };
-                throw new PayForgeryException("결제금액 불일치");
-            }
-        } catch (PayForgeryException e){
-            String msg = "위조된 결제시도가 있습니다. 담당자 확인 후 결제가 처리됩니다.";
-            jsonResult.addProperty("status", "failed");
-            //위조시 예약상태 예약기타 불가 6G로
-            reservService.updateRsvtStt(RESERV_ETC, PAY_STT_FORGERY_PRC, payDto.getRsvt_no());
-        } catch (MlgForgeryException e){
-            String msg = "위조된 결제시도가 있습니다. 담당자 확인 후 결제가 처리됩니다.";
-            jsonResult.addProperty("status", "failed");
-            //위조시 예약상태 예약기타 불가 6G로
-            reservService.updateRsvtStt(RESERV_ETC, PAY_STT_FORGERY_PRC, payDto.getRsvt_no());
+            PrepareData prepareData = new PrepareData(merchant_uid, new BigDecimal(amount));
+            client.postPrepare(prepareData);
         } catch (Exception e) {
             e.printStackTrace();
-            //db에서 결제 예정금액 못가져오면 이곳으로 옴
+            jsonResult.addProperty("status", "fail");
+
+            return jsonResult.toString();
         }
-        //db에 정보저장
 
         payDto.setUsr_id(usr_id);
-        payDto.setPay_prc(amount.longValue());
-        payDto.setPay_date(new Date()); //import에서 주는 값 확인하기
-        payDto.setPay_mthd("card"); //(String)map.get("pay_method")
-
+        payDto.setPay_no(merchant_uid);
+        payDto.setCmn_cd_pay_stt(PAY_STT_READY);
+        payDto.setCmn_cd_pay_appr(PAY_APPV_BEING_PROCESSED);
         payService.savePayInfo(payDto);
-        //예외 어떻게 처리행.. 앞에 validation처리를 하자
-        reservService.changeReservCount(payDto.getPrd_dtl_cd(), payDto.getRsvt_no(), "plus");
 
-        String result = jsonResult.toString();
+        jsonResult.addProperty("status", "true");
+        jsonResult.addProperty("merchant_uid", merchant_uid);
 
+        return jsonResult.toString();
+    }
+
+    @PostMapping("/test")
+    public void test(){
+        System.out.println("test success!");
+    }
+    //웹훅 있는 버전
+    @ResponseBody
+    @PostMapping("/webhookTest")
+    public String saveWebhookResult(String imp_uid, String merchant_uid, HttpSession session){
+        JsonObject jsonResult = new JsonObject();
+        PayResultDto payResultDto;
+        UserDto userDto = (UserDto) session.getAttribute("userDto");
+        long amount = 0;
+
+        try {
+            IamportResponse<Payment> payment_response = client.paymentByImpUid(imp_uid);
+            amount = payment_response.getResponse().getAmount().longValue();
+
+            PayViewDto payViewDto = payService.getMlgAndPrdInfo(merchant_uid);
+            int used_mlg = payViewDto.getUsed_mlg();
+            long pay_ftr_prc = payViewDto.getPay_ftr_prc();
+            double amountToBePaid = pay_ftr_prc - used_mlg;
+
+            if(amount==amountToBePaid){
+                payResultDto = new PayResultDto(merchant_uid,
+                        amount,
+                        new Date(),
+                        "card",
+                        PAY_STT_COMPLETE,
+                        PAY_APPV_SUCCESS,
+                        RESERV_COMPELET,
+                        imp_uid);
+
+                if(userDto!=null){
+                    reservService.updateUserMlg("minus", used_mlg, userDto.getUsr_id());
+                }
+
+                payService.savePayResult(payResultDto);//
+                reservService.changeReservCount(payViewDto.getPrd_dtl_cd(), payViewDto.getRsvt_no(), "plus");
+
+                jsonResult.addProperty("status", "success");
+            } else {
+                throw new PayForgeryException("결제금액 불일치");
+            }
+        }  catch (PayForgeryException e){
+            try{
+                payResultDto = new PayResultDto(merchant_uid,
+                        amount,
+                        new Date(),
+                        "card",
+                        PAY_STT_FORGERY_PRC,
+                        PAY_APPV_SUCCESS,
+                        RESERV_ETC,
+                        imp_uid);
+
+                payService.savePayResult(payResultDto);
+            } catch (Exception ex){
+                ex.printStackTrace();
+            }
+
+            jsonResult.addProperty("status", "forgery");
+        } catch (Exception e){
+            //결제저장 안 된 경우
+            e.printStackTrace();
+        }
+        return jsonResult.toString();
+    }
+
+    @ResponseBody
+    @PostMapping("/webhookPayFail")
+    public boolean handlePayFail(@RequestBody PayDto payDto){
+        boolean result = false;
+
+        try {
+        //error_code를 portone에서 제공해주지 않아 PAY_STT_CANCELLED로 저장
+        PayResultDto payResultDto = new PayResultDto(payDto.getPay_no(),
+                0,
+                new Date(),
+                "card",
+                PAY_STT_CANCELLED,
+                PAY_APPV_FAIL,
+                RESERV_APPV,
+                payDto.getImp_uid());
+
+            payService.savePayResult(payResultDto);
+            result = true;
+        } catch (Exception e) {
+            //portone과 연결문제
+            e.printStackTrace();
+        }
         return result;
+    }
+
+    //웹훅 없는 버전
+    @ResponseBody
+    @PostMapping("/saveResult")
+    public String savePayResult(@RequestBody PayDto payDto, HttpSession session){
+        JsonObject jsonResult = new JsonObject();
+        String imp_uid = payDto.getImp_uid();
+        PayResultDto payResultDto;
+        UserDto userDto = (UserDto) session.getAttribute("userDto");
+        long amount = 0;
+
+        try {
+            IamportResponse<Payment> payment_response = client.paymentByImpUid(imp_uid);
+            amount = payment_response.getResponse().getAmount().longValue();
+
+            PayViewDto payViewDto = payService.getMlgAndPrdInfo(payDto.getPay_no());
+            int used_mlg = payViewDto.getUsed_mlg();
+            long pay_ftr_prc = payViewDto.getPay_ftr_prc();
+            double amountToBePaid = pay_ftr_prc - used_mlg;
+
+            if(amount==amountToBePaid){
+                payResultDto = new PayResultDto(payDto.getPay_no(),
+                        amount,
+                        new Date(),
+                        "card",
+                        PAY_STT_COMPLETE,
+                        PAY_APPV_SUCCESS,
+                        RESERV_COMPELET,
+                        payDto.getImp_uid());
+
+                if(userDto!=null){
+                    reservService.updateUserMlg("minus", used_mlg, userDto.getUsr_id());
+                }
+
+                payService.savePayResult(payResultDto);
+                reservService.changeReservCount(payViewDto.getPrd_dtl_cd(), payDto.getRsvt_no(), "plus");
+
+                jsonResult.addProperty("status", "success");
+            } else {
+                throw new PayForgeryException("결제금액 불일치");
+            }
+        }  catch (PayForgeryException e){
+            try{
+                payResultDto = new PayResultDto(payDto.getPay_no(),
+                        amount,
+                        new Date(),
+                        "card",
+                        PAY_STT_FORGERY_PRC,
+                        PAY_APPV_SUCCESS,
+                        RESERV_ETC,
+                        payDto.getImp_uid());
+
+                payService.savePayResult(payResultDto);
+            } catch (Exception ex){
+                ex.printStackTrace();
+            }
+
+            jsonResult.addProperty("status", "failed");
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return jsonResult.toString();
     }
 
     @GetMapping("/confirm")
@@ -233,7 +329,7 @@ public class PayController {
 
         List list = reservService.getReservView(rsvt_no);
 
-        ReservConfInfoDto rcid = null; //ReservCo
+        ReservConfInfoDto rcid = null;
         PayDto payDto = null;
         List<TravelerInfoDto> trvlrInfoDtos = new ArrayList<>();
 
@@ -264,7 +360,6 @@ public class PayController {
 
             String usr_id = "";
             if(userDto!=null){
-                //회원
                 usr_id = userDto.getUsr_id();
             } else {
                 usr_id = gst_id;
@@ -293,22 +388,19 @@ public class PayController {
     public String processCancel(@RequestBody CancelViewDto cancelViewDto, HttpSession session){
         UserDto userDto = (UserDto) session.getAttribute("userDto");
         String gst_id = (String) session.getAttribute("guest");
+        JsonObject jsonResult = new JsonObject();
+        IamportResponse<Payment> payment_response;
+        PayDto payDto;
 
         String usr_id = "";
         if(userDto!=null){
-            //회원
             usr_id = userDto.getUsr_id();
         } else {
             usr_id = gst_id;
         }
 
-        JsonObject jsonResult = new JsonObject();
 
-        String access_token = payService.getToken(IMP_KEY, IMP_SECRET);
-
-        PayDto payDto = null;
         try {
-            //유저가 다른 고객의 예약번호로 들어옴
             payDto = payService.getPayInfo(cancelViewDto.getRsvt_no(), usr_id);
         } catch (Exception e) {
             e.printStackTrace();
@@ -320,7 +412,7 @@ public class PayController {
 
         if(PAY_STT_READY.equals(status) || PAY_STT_CANCELLED.equals(status)
             ||PAY_STT_FAILED.equals(status)||PAY_STT_PREPARE.equals(status)){
-            //환불이 안되는 상태코드 취소금액 컬럼 추가해서 금액으로 비교?
+
             jsonResult.addProperty("status", "ACCESS_DENIED");
             return jsonResult.toString();
         }
@@ -332,42 +424,33 @@ public class PayController {
 
         payDto.setCnc_rsn(cancelViewDto.getCnc_rsn());
 
-        Map<String, Object> response = null;
         try {
-            response = payService.cancelPay(payDto, access_token);
+            payment_response = client.paymentByImpUid(payDto.getImp_uid());
         } catch (Exception e) {
             e.printStackTrace();
             jsonResult.addProperty("status", "CANCEL_FAILED");
-            //reserv/reservView로 돌아감
             return jsonResult.toString();
         }
 
         if(userDto!=null){
-            //마일리지 다시 돌려줌
-            //회원인 경우에만
             reservService.updateUserMlg("plus", payDto.getUsed_mlg(), usr_id);
         }
 
         payDto.setPay_no(cancelViewDto.getNew_pay_no());
-//        payDto.setPay_prc((Double.valueOf(response.get("amount"))).longValue());
-        Double amount = (Double) response.get("amount");
-        payDto.setPay_prc(amount.longValue());
+        long amount = payment_response.getResponse().getAmount().longValue();
+        payDto.setPay_prc(amount);
         payDto.setPay_date(new Date());
-        payDto.setCmn_cd_pay_appr(PAY_APPV_SUCCESS); //의미 없음
-        payDto.setCmn_cd_pay_stt(PAY_STT_CANCELLED); //결제취소 성공
+        payDto.setCmn_cd_pay_appr(PAY_APPV_SUCCESS);
+        payDto.setCmn_cd_pay_stt(PAY_STT_CANCELLED);
         payDto.setDvd_mnt(0);
         payDto.setUsed_mlg(0);
 
-        //취소내역 pay에 저장
         payService.savePayInfo(payDto);
-        //예약테이블에 상태 업데이트
         reservService.updateRsvtStt(RESERV_CANCEL, PAY_STT_CANCELLED, cancelViewDto.getRsvt_no());
-        //상품상세 예약 인원 빼기
         reservService.changeReservCount(payDto.getPrd_dtl_cd(), payDto.getRsvt_no(), "minus");
         payService.deleteTrvlrList(cancelViewDto.getRsvt_no());
 
-        String result = jsonResult.toString();
-        return result;
+        return jsonResult.toString();
     }
 
 
@@ -379,8 +462,7 @@ public class PayController {
     private boolean loginCheck(HttpSession session){
         UserDto userDto =(UserDto) session.getAttribute("userDto");
         String gst_id =(String) session.getAttribute("guest");
-        boolean result = (userDto != null || gst_id != null);
-        return result;
+        return (userDto != null || gst_id != null);
     }
 }
 
@@ -397,4 +479,9 @@ class MlgForgeryException extends RuntimeException {
     MlgForgeryException(String msg){
         super(msg);
     }
+}
+
+class savePayResultFailException extends RuntimeException {
+    savePayResultFailException(String msg) {
+        super(msg);}
 }
